# TriEngine

./: CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: sdl2-config.cmake
ecs/: Components.h  EntityComponentSystem.h
ecs/components/: PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.h
io/: Keyboard.cpp  Keyboard.h
rendering/: GameRenderer.cpp  GameRenderer.h
rendering/texture/: TextureManager.cpp  TextureManager.h
rendering/tileMap/: TileMap.cpp  TileMap.h
utils/: Math.h
utils/math/: Vector2D.cpp  Vector2D.h
